--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>WDI32 Group Project</title>
+  <title>WDI33 Project 3</title>
 </head>
 <body>
 
-  <h1>WDI32 Group Project</h1>
+  <h1>WDI33 Project 3</h1>
 
 </body>
 </html>
