--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='todo'>
 <head>
   <meta charset="utf-8">
   <title>WDI33 Project 3</title>
 </head>
 <body>
-
+  <ui-view></ui-view>
 </body>
 </html>
