--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 <body>
   <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" ui-sref='tasksHome({ id: currentUser._id })'>
+    <a class="navbar-item" ui-sref='tasksHome({ id: JSON.parse(localStorage.getItem("lastname")) })'>
       Home
     </a>
     <a class="navbar-item" ui-sref='login'>
