--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>WDI33 Project 3</title>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWsQJmU3ga6-p_SwGkJT2Ro7shpx8QzQI&libraries=places"></script>
 </head>
 <body ng-controller="MainCtrl as main">
   <nav class="navbar" role="navigation" aria-label="main navigation" ng-init="main.setCurrentUser()">
