--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body ng-controller="MainCtrl as main">
   <nav class="navbar" role="navigation" aria-label="main navigation" ng-init="main.setCurrentUser()">
   <div class="navbar-brand">
-    <a class="navbar-item" ui-sref='/' ng-if="!main.isAuthenticated()">
+    <a class="navbar-item" ui-sref='home' ng-if="!main.isAuthenticated()">
       Landing Page
     </a>
     <a class="navbar-item" ui-sref='tasksHome({ id: main.currentUser._id })' ng-if="main.isAuthenticated()">
