started data visualisation stuff

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
     </div>
   </div>
   </nav>
-<div ng-if="main.flashMessage.content">
+<div ng-if="main.flashMessage.content" class="flash-message {{ main.flashMessage.style }}">
   {{ main.flashMessage.content }}
 </div>
 <div class="container">
