Fixed invalid URL bug

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="todo">
 <head>
   <meta charset="utf-8">
-  <title>WDI33 Project 3</title>
+  <title>Turtle To-Do</title>
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,800" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWsQJmU3ga6-p_SwGkJT2Ro7shpx8QzQI&libraries=places"></script>
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmhnxJ-_oKquURKHu0_LLjqi_r_se8DNw&libraries=places"></script> -->
