--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Turtle To-Do</title>
   <link href="https://fonts.googleapis.com/css?family=Dosis:400,800" rel="stylesheet">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAWsQJmU3ga6-p_SwGkJT2Ro7shpx8QzQI&libraries=places"></script>
+  <link rel="icon" href="./assets/image/favicon.png" type="image/x-icon"/>
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmhnxJ-_oKquURKHu0_LLjqi_r_se8DNw&libraries=places"></script> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 </head>
